# godot_grpc

./: .gitignore  BUILD_SUCCESS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PLATFORM_BUILDS.md  QUICKSTART.md  README.md  conanfile.txt  vcpkg.json
.github/workflows/: build-release.yml  build-windows.yml
demo/: main.tscn  project.godot
demo/scripts/: grpc_demo.gd  grpc_demo.gd.uid
demo_server/: README.md  go.mod  helloworld.proto  main.go  metrics.proto
docs/: ANDROID_BUILD_PLAN.md  API_REFERENCE.md  CROSS_COMPILE.md  DEVELOPER_GUIDE.md  EXAMPLES.md  RELEASE_PROCESS.md  STREAMING_API.md  TUTORIAL.md
scripts/: build_conan.sh  build_universal_macos.sh  build_vcpkg.sh  build_win.ps1
src/: grpc_channel_pool.cpp  grpc_channel_pool.h  grpc_client.cpp  grpc_client.h  grpc_stream.cpp  grpc_stream.h  register_types.cpp  register_types.h
src/util/: status_map.cpp  status_map.h
